frame/support/test/tests/pallet_ui/storage_001.stderr
error: Invalid pallet::storage, expect item type
  --> $DIR/storage_001.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
